RESOLVED FIXED187736
CodeBlock::baselineVersion() should account for executables with purged codeBlocks.
https://bugs.webkit.org/show_bug.cgi?id=187736
Summary CodeBlock::baselineVersion() should account for executables with purged codeB...
Mark Lam
Reported 2018-07-17 12:09:48 PDT
Attachments
proposed patch. (2.63 KB, patch)
2018-07-17 12:15 PDT, Mark Lam
msaboff: review-
proposed patch. (2.65 KB, patch)
2018-07-17 12:21 PDT, Mark Lam
msaboff: review+
Mark Lam
Comment 1 2018-07-17 12:15:30 PDT
Created attachment 345180 [details] proposed patch.
Michael Saboff
Comment 2 2018-07-17 12:18:56 PDT
Comment on attachment 345180 [details] proposed patch. r=me
Michael Saboff
Comment 3 2018-07-17 12:19:47 PDT
Comment on attachment 345180 [details] proposed patch. Need to fix the EWS build failures.
Mark Lam
Comment 4 2018-07-17 12:21:12 PDT
Created attachment 345181 [details] proposed patch.
Michael Saboff
Comment 5 2018-07-17 12:23:49 PDT
Comment on attachment 345181 [details] proposed patch. r=me
Mark Lam
Comment 6 2018-07-17 13:20:54 PDT
Thanks for the review. Landed in r233893: <http://trac.webkit.org/r233893>.
Note You need to log in before you can comment on or make changes to this bug.