CodeBlock::baselineVersion() should account for executables with purged codeBlocks. https://bugs.webkit.org/show_bug.cgi?id=187736 <rdar://problem/42114371>

Reviewed by Michael Saboff.

CodeBlock::baselineVersion() currently checks for a null replacement but does not
account for the fact that that the replacement can also be null due to the
executable having being purged of its codeBlocks due to a memory event (see
ExecutableBase::clearCode()).  This patch adds code to account for this.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::baselineVersion):



Canonical link: https://commits.webkit.org/202940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233893 268f45cc-cd09-0410-ab3c-d52691b4dbfc